--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -121,6 +121,7 @@
     --primary-foreground: var(--color-neutral-0-80);
     --secondary: var(--color-neutral-2);
     --secondary-foreground: var(--color-neutral-7);
+    --radius: 8px;
   }
 }
 
