--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -42,3 +42,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  .grid-cols-auto-fill-minmax {
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+  }
+}
