feature: design favorite page

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -44,7 +44,7 @@
 }
 
 @layer utilities {
-  .grid-cols-auto-fill-minmax {
-    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+  .grid-cols-auto-fill-px {
+    grid-template-columns: repeat(auto-fill, 220px);
   }
 }
