--- a/src/views/model/ui/styles.css
+++ b/src/views/model/ui/styles.css
@@ -2,7 +2,7 @@
 .grid-areas-layout {
   display: grid;
   grid-template-areas: 'a b';
-  grid-template-columns: 387px 1fr;
+  grid-template-columns: minmax(387px, 1fr) 3fr;
 }
 
 .grid-area-left {
