--- a/src/views/model/ui/styles.css
+++ b/src/views/model/ui/styles.css
@@ -1,19 +1,4 @@
-/* archive page layout */
-.grid-areas-layout {
-  display: grid;
-  grid-template-areas: 'a b';
-  grid-template-columns: minmax(387px, 1fr) 3fr;
-}
-
-.grid-area-left {
-  grid-area: a;
-}
-
-.grid-area-right {
-  grid-area: b;
-}
-
-/* archive page - "generate" layout */
+/* archive page - generate layout */
 .grid-areas-generate-layout {
   display: grid;
   grid-template-areas:
@@ -21,6 +6,7 @@
     'c d'
     'c e';
   grid-template-columns: repeat(2, 1fr);
+  /* grid-template-rows: minmax(auto, 700px) 1fr; */
 }
 
 .grid-area-generate-editing {
