--- a/src/views/model/ui/styles.css
+++ b/src/views/model/ui/styles.css
@@ -5,7 +5,7 @@
     'a b'
     'c d'
     'c e';
-  grid-template-columns: minmax(477px, auto) minmax(auto, 428px);
+  grid-template-columns: minmax(477px, 1.5fr) 1fr;
   grid-template-rows: auto 1fr;
 }
 
@@ -26,11 +26,4 @@
 }
 .grid-area-generate-aspectratio {
   grid-area: e;
-}
-
-/* variations section */
-.grid-area-variations {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, minmax(219px, auto));
 }
