--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -86,3 +86,22 @@
   line-height: 1.5;
   word-break: break-all;
 }
+
+*::-webkit-scrollbar {
+  background-color: inherit;
+  width: 6px;
+}
+*::-webkit-scrollbar-track {
+  background-color: inherit;
+}
+*::-webkit-scrollbar-track:hover {
+  background-color: inherit;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: var(--border);
+  border: 1px solid inherit;
+  border-radius: 1rem;
+}
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #616268;
+}
