--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -41,6 +41,7 @@
     line-height: normal;
     list-style: none;
     box-sizing: border-box;
+    font-size: 16px;
   }
   body {
     @apply bg-background text-foreground;
@@ -100,7 +101,7 @@
 *::-webkit-scrollbar-thumb {
   background-color: var(--border);
   border: 1px solid inherit;
-  border-radius: 1rem;
+  border-radius: 16px;
 }
 *::-webkit-scrollbar-thumb:hover {
   background-color: #616268;
