--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -58,6 +58,26 @@
     left: 50%;
     transform: translate(-50%, -50%);
   }
+  .loading-skeleton {
+    background-color: #202124;
+  }
+  .loading-skeleton::after {
+    content: ' ';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-image: linear-gradient(90deg, #202124, #38393d, #202124);
+    transform: translateX(-100%);
+    animation-name: react-loading-skeleton;
+    animation-direction: normal;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+  }
 }
 
 .a11y-hidden {
@@ -105,4 +125,8 @@
 }
 *::-webkit-scrollbar-thumb:hover {
   background-color: #616268;
+}
+
+img {
+  vertical-align: middle;
 }
