--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -50,7 +50,7 @@
 
 @layer utilities {
   .grid-cols-auto-fill-px {
-    grid-template-columns: repeat(auto-fill, 220px);
+    grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
   }
   .absolute-center {
     position: absolute;
