--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -83,6 +83,12 @@
     animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
   }
+  .svg-color-parent svg {
+    stroke: currentColor;
+  }
+  .svg-color-parent:active svg {
+    stroke: white;
+  }
 }
 
 .a11y-hidden {
