--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -133,6 +133,7 @@
 *::-webkit-scrollbar {
   background-color: inherit;
   width: 6px;
+  height: 6px;
 }
 *::-webkit-scrollbar-track {
   background-color: inherit;
