feature: update ring color

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -33,7 +33,7 @@
 
     --border: #393a40;
     --input: 0 0% 16%;
-    /* --ring: 150 100% 40%; */
+    --ring: rgba(255, 255, 255, 0.5);
     --radius: 16px;
   }
 }
