--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -158,3 +158,15 @@
 img {
   vertical-align: middle;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
+}
