[DEV-56] feat: my-models > edits 화면 마크업 (#14)
* refactor: archive에서 my models로 페이지 이름 변경

* feat: EditsCardItem 디자인 및 스토리북 작성

* feat: EditsCardItems grid 레이아웃

* feat: shadcn tabs 설치 및 스타일 수정

* feat: my models 페이지에 tabs 추가

* feat: tabs mt 제거

* feat: 오타 수정 (generates -> Generatives)

* refactor: 변수명 변경 (Filter -> FilterTagTypes, filterType -> tagType)

* refactor: favorites SortDropdown을 FilterDropdown으로 공통 컴포넌트화 및 OrderDropdown로 이름 수정

* feat: FilterDropdown 스타일 수정

* refactor: 사용하는 곳에서 조합하도록 FilterDropwdon 컴포넌트에서 useFilter 분리

* feat: my models > edits 정렬 및 필터링 기능 추가

* refactor: style 속성에서 classname 사용으로 수정

* feat: OptionsType.typemap이 빈 객체인 경우를 방지하기 위해 useFilter에 제네릭 추가

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -74,6 +74,11 @@
     grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   }
 
+  /* TODO: 반응형 추가 */
+  .grid-edits-medium {
+    grid-template-columns: repeat(auto-fill, minmax(269px, 1fr));
+  }
+
   .absolute-center {
     position: absolute;
     top: 50%;
