[DEV-108] faet: Skin Glow 레이어 제작 & 합치기 (#72)
* feat: ImageView에 Skinglow 추가

* etc: 레이어 쌓는 순서 변경

* feat: Skinglow 적용 파트 리팩토링

* feat: Skinglow 결과 레이어화

* feat: Skinglow 로직 수정

* feat: normap 적용 방식 수정 (maskmap과 겹치지 않도록)

* etc: skin glow size 범위 수정

* feat: 메모리 누수 이슈 해결

* feat: Glow Controller 마크업, 기능제작

* etc: 고정 스타일 상수화

* feat: 언마운트시 throttle 정리 추가

* etc: UI TEXT 상수화

* [DEV-111] feat: 렌즈 레이어 합성 (#73)

* feat: 렌즈 구조 변경 뷰 -> 훅

* feat: 이미지뷰에 렌즈 적용

* feat: 렌즈 Turn off on 기능 제작

* etc: 스킨글로우 커서 z-index 수정

* feat: 렌즈 확대, 축소, 이동 기능 추가

* etc: 렌즈 교체

* feat: movable on off 제작

* feat: hair color edit mask 오류 해결

* feat: revert to original 때 렌즈 초기화 기능 추가

* feat: 다른 탭에서는 렌즈 moveable 안나오도록 수정

* feat: revert to original 후 fore 이미지 없어지는 오류 해결

* etc: 로그 제거

* etc: 불필요한 스타일 제거

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -175,3 +175,26 @@ input::-webkit-inner-spin-button {
 input[type='number'] {
   -moz-appearance: textfield;
 }
+
+.moveable-control,
+.moveable-rotate {
+  border: 1px solid #6effb6 !important;
+  background-color: #6effb6 !important;
+  width: 10px !important;
+  height: 10px !important;
+  margin-left: -5px !important;
+  margin-top: -5px !important;
+}
+
+.moveable-line {
+  background-color: #6effb6 !important;
+  border-color: #6effb6 !important;
+  border: 1px dashed #6effb6 !important;
+}
+
+.hide-moveable-controls .moveable-control,
+.hide-moveable-controls .moveable-line,
+.hide-moveable-controls .moveable-rotate,
+.hide-moveable-controls .moveable-origin {
+  display: none !important;
+}
